--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "version": "1.1.4",
+  "version": "1.1.5",
   "name": "re-exp",
   "author": "Max Shane <wellloy1@gmail.com>",
   "description": "Creates an index file (.js, .ts, .jsx, .tsx) in a directory and re-exports variables from modules within that directory.",
   "scripts": {
-    "demo": "node ./example/index.js",
+    "demo": "re-exp -d example -e ts",
     "postinstall": "chmod +x ./command.js"
   },
   "bin": {
